--- a/.github/workflows/gencube-data-aggregator.yml
+++ b/.github/workflows/gencube-data-aggregator.yml
@@ -2,8 +2,7 @@ name: Gencube Data Aggregator Pipeline
 
 on:
   schedule:
-    # Runs once daily at 00:00 KST (15:00 UTC)
-    - cron: '0 15 * * *'
+    - cron: '0 15 * * *'  # Runs daily at 00:00 KST (15:00 UTC)
   workflow_dispatch:
 
 jobs:
@@ -21,7 +20,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y lftp
           pip install --upgrade pip
-          pip install selenium
+          pip install selenium pandas
 
       - name: Create data-aggregator folder
         run: mkdir -p data-aggregator
@@ -35,22 +34,30 @@ jobs:
             > data-aggregator/ensembl-beta_ftp_structure.txt || \
           { echo 'lftp command timed out after 10 minutes'; exit 1; }
 
-      - name: Convert structure to JSON (drop only root-file nodes, remove 'test' & 'vep')
+      - name: Convert structure to JSON (drop only root-level files, remove 'test' and 'vep' directories)
         run: |
           python3 << 'EOF'
           import json
 
           def parse_ls_output(fp):
+              """
+              Parse recursive directory listing into nested dict.
+              Keys are file or directory names; directories have dict values, files have None.
+              """
               tree = {}
-              cur = []
+              path_stack = []
               with open(fp) as f:
                   for line in f:
                       line = line.rstrip("\n")
                       if not line:
                           continue
                       if line.endswith(":"):
-                          hdr = line[:-1]
-                          cur = [] if hdr == "." else hdr.lstrip("./").split("/")
+                          header = line[:-1]
+                          # Set current path; skip leading './'
+                          if header in (".", "./"):
+                              path_stack = []
+                          else:
+                              path_stack = header.lstrip("./").split("/")
                           continue
                       parts = line.split()
                       if len(parts) < 9:
@@ -58,25 +65,28 @@ jobs:
                       name = " ".join(parts[8:])
                       is_dir = parts[0].startswith("d")
                       node = tree
-                      for d in cur:
-                          node = node.setdefault(d, {})
+                      for part in path_stack:
+                          node = node.setdefault(part, {})
                       node[name] = {} if is_dir else None
               return tree
 
           def prune_root_files(tree):
-              # remove only top-level file entries (value=None)
-              for k, v in list(tree.items()):
-                  if v is None:
-                      del tree[k]
+              """
+              Remove only top-level file entries (value=None).
+              """
+              for key in list(tree.keys()):
+                  if tree[key] is None:
+                      del tree[key]
 
           def remove_unwanted(tree):
-              # remove top-level 'test'
+              """
+              Remove 'test' at top level and 'vep' under each genome directory.
+              """
               tree.pop("test", None)
-              # remove any 'vep' folder immediately under each genome
-              for sp, gm in list(tree.items()):
-                  if not isinstance(gm, dict):
+              for species, genomes in list(tree.items()):
+                  if not isinstance(genomes, dict):
                       continue
-                  for gid, contents in list(gm.items()):
+                  for genome_id, contents in list(genomes.items()):
                       if isinstance(contents, dict):
                           contents.pop("vep", None)
               return tree
@@ -87,82 +97,127 @@ jobs:
               tree = remove_unwanted(tree)
               with open("data-aggregator/ensembl-beta_ftp_structure.json", "w") as out:
                   json.dump(tree, out, indent=4)
-              print("Saved JSON with root-file nodes pruned.")
+              print("Saved JSON with root-level files pruned.")
           EOF
 
-      - name: Generate information file
+      - name: Generate information files
         run: |
           python3 << 'EOF'
           import json
 
+          # Load JSON structure
           with open("data-aggregator/ensembl-beta_ftp_structure.json") as f:
               data = json.load(f)
 
-          species_lines = ["Species\tGenome"]
-          total_lines   = ["Species\tGenome"]
-          sp_count = gen_count = 0
+          # Prepare count lines: species vs number of assemblies
+          species_lines = ["Species\tGenomeCount"]
+          total_lines = ["TotalSpecies\tTotalGenomes"]
+          species_count = 0
+          genome_count = 0
 
           for species, genomes in data.items():
-              if species == "test" or not isinstance(genomes, dict):
+              if not isinstance(genomes, dict):
                   continue
+              # Count assemblies starting with GCA_ or GCF_
               count = sum(1 for gid in genomes if gid.startswith(("GCA_","GCF_")))
               species_lines.append(f"{species}\t{count}")
-              sp_count  += 1
-              gen_count += count
+              species_count += 1
+              genome_count += count
 
-          total_lines.append(f"{sp_count}\t{gen_count}")
+          total_lines.append(f"{species_count}\t{genome_count}")
 
+          # Save counts
           with open("data-aggregator/ensembl-beta_count_species.txt", "w") as sf:
               sf.write("\n".join(species_lines))
           with open("data-aggregator/ensembl-beta_count_total.txt", "w") as tf:
               tf.write("\n".join(total_lines))
 
-          print("Count files saved.")
+          print("Saved species and genome count files.")
+          EOF
+
+      - name: Fetch Zoonomia metadata and save as pickle
+        run: |
+          python3 << 'EOF'
+          import pandas as pd
+          from your_utils_module import download_csv  # adjust import path as needed
+
+          ZOONOMIA_URL = 'https://genome.senckenberg.de/download/TOGA'
+          DIC_ZOONOMIA = {
+              'human':                'human_hg38_reference',
+              'mouse':                'mouse_mm10_reference',
+              'chicken':              'chicken_galGal6_reference',
+              'greenSeaturtle':       'greenSeaturtle_HLcheMyd2_reference',
+              'pikePerch':            'pikePerch_HLsanLuc1_reference',
+              'purpleSeaUrchin':      'purpleSeaUrchin_HLstrPur5_reference',
+              'redEaredSlideTurtle':  'redEaredSlideTurtle_HLtraScrEle1_reference',
+              'thaleCress':           'thaleCress_HLParaTha1_reference',
+              'tobaccoHawkmoth':      'tobaccoHawkmoth_HLmanSex2_reference'
+          }
+
+          # Collect Zoonomia metadata tables
+          frames = []
+          for ref_name, subdir in DIC_ZOONOMIA.items():
+              url = f"{ZOONOMIA_URL}/{subdir}/overview.table.tsv"
+              df = pd.read_csv(download_csv(url, verify=False), sep='\t')
+              df['reference'] = ref_name
+              frames.append(df)
+
+          df_zoonomia = pd.concat(frames, ignore_index=True)
+          # Save as pickle
+          df_zoonomia.to_pickle("data-aggregator/zoonomia_meta.pkl")
+          print("Saved Zoonomia metadata as pickle.")
           EOF
 
       - name: Fetch SRA advanced index list using Selenium and save as JSON
         run: |
           python3 << 'EOF'
-          import time, re, json
+          import re
+          import json
+          import time
           from selenium import webdriver
           from selenium.webdriver.common.by import By
           from selenium.webdriver.support.ui import WebDriverWait, Select
           from selenium.webdriver.support import expected_conditions as EC
 
+          # Initialize headless browser
           options = webdriver.ChromeOptions()
           options.add_argument("--headless")
           driver = webdriver.Chrome(options=options)
+
           driver.get("https://www.ncbi.nlm.nih.gov/sra/advanced")
           time.sleep(3)
 
           fields = [
-              ("Strategy", "LS_STRATEGY"),
-              ("Source",   "LS_SOURCE"),
-              ("Platform", "LS_PLATFORM"),
-              ("Selection","LS_SELECTION"),
-              ("Filter",   "LS_FILTER"),
-              ("Properties","LS_PROPERTIES")
+              ("Strategy",   "LS_STRATEGY"),
+              ("Source",     "LS_SOURCE"),
+              ("Platform",   "LS_PLATFORM"),
+              ("Selection",  "LS_SELECTION"),
+              ("Filter",     "LS_FILTER"),
+              ("Properties", "LS_PROPERTIES"),
           ]
 
           results = {}
           for label, var in fields:
+              # Select field label
               Select(driver.find_element(By.ID, "ff_0")).select_by_visible_text(label)
               time.sleep(1)
-              btn = WebDriverWait(driver,10).until(
-                  EC.element_to_be_clickable((By.XPATH,"//select[@id='ff_0']/following::a[@class='show_index'][1]"))
+              # Click "show index" link next to the dropdown
+              btn = WebDriverWait(driver, 10).until(
+                  EC.element_to_be_clickable((By.XPATH, "//select[@id='ff_0']/following::a[@class='show_index'][1]"))
               )
               btn.click()
-              time.sleep(3)
-              opts = driver.find_element(By.ID,"terms_list").find_elements(By.TAG_NAME,"option")
-              results[var] = [
-                  re.sub(r'\s*\(.*?\)','', opt.text).strip().replace(' ','_')
-                  for opt in opts
-              ]
+              time.sleep(2)
+              # Collect options text
+              opts = driver.find_element(By.ID, "terms_list").find_elements(By.TAG_NAME, "option")
+              values = [re.sub(r'\s*\(.*?\)', "", opt.text).strip().replace(" ", "_") for opt in opts]
+              results[var] = values
 
           driver.quit()
-          with open("data-aggregator/sra_advanced_index.json","w") as out:
+
+          # Save SRA index JSON
+          with open("data-aggregator/sra_advanced_index.json", "w") as out:
               json.dump(results, out, indent=4)
-          print("SRA index saved.")
+          print("Saved SRA advanced index JSON.")
           EOF
 
       - name: Commit and push changes
@@ -171,7 +226,7 @@ jobs:
           git config --global user.email "thsrms9216@gmail.com"
           if [ -n "$(git status --porcelain data-aggregator/)" ]; then
             git add data-aggregator/
-            git commit -m "Update FTP structure, counts & SRA index"
+            git commit -m "Update FTP structure, counts, Zoonomia metadata & SRA index"
             git push https://snu-cdrc:${{ secrets.MY_PAT }}@github.com/snu-cdrc/gencube.git
           else
             echo "No changes to commit."
