--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "gencube"
-version = "1.9.0"
+version = "1.10.0"
 description = "GenCube enables researchers to search for, download, and unify genome assemblies and diverse types of annotations, and retrieve metadata for sequencing-based experimental data suitable for specific requirements."
 readme = "README.md"
 license = "MIT"
@@ -35,10 +35,10 @@ classifiers = [
 ]
 dependencies = [
   "biopython>=1.79",
-  "pandas>=1.0.0",
-  "numpy>=1.21.0,<2",
+  "pandas>=1.3.0",
+  "numpy>=1.21.0",
   "requests>=2.25.1",
-  "urllib3>=1.26.5",
+  "urllib3>=1.26.5,<3.0",
   "xmltodict>=0.12.0",
   "beautifulsoup4>=4.9.3",
   "tqdm>=4.61.2",
